--- a/styles/output.css
+++ b/styles/output.css
@@ -622,34 +622,6 @@ video {
   left: 0px;
 }
 
-.right-0{
-  right: 0px;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.top-auto{
-  top: auto;
-}
-
-.top-1{
-  top: 0.25rem;
-}
-
-.top-5{
-  top: 1.25rem;
-}
-
-.top-20{
-  top: 5rem;
-}
-
-.top-10{
-  top: 2.5rem;
-}
-
 .left-10{
   left: 2.5rem;
 }
@@ -658,20 +630,48 @@ video {
   left: 1.25rem;
 }
 
-.right-5{
-  right: 1.25rem;
-}
-
-.top-3{
-  top: 0.75rem;
+.right-0{
+  right: 0px;
 }
 
 .right-10{
   right: 2.5rem;
 }
 
+.right-5{
+  right: 1.25rem;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-1{
+  top: 0.25rem;
+}
+
+.top-10{
+  top: 2.5rem;
+}
+
+.top-20{
+  top: 5rem;
+}
+
+.top-3{
+  top: 0.75rem;
+}
+
 .top-4{
   top: 1rem;
+}
+
+.top-5{
+  top: 1.25rem;
+}
+
+.top-auto{
+  top: auto;
 }
 
 .order-1{
@@ -686,12 +686,12 @@ video {
   order: 3;
 }
 
-.m-0{
-  margin: 0px;
-}
-
 .-m-16{
   margin: -4rem;
+}
+
+.m-0{
+  margin: 0px;
 }
 
 .m-10{
@@ -701,6 +701,18 @@ video {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+
+.-ml-16{
+  margin-left: -4rem;
+}
+
+.-ml-20{
+  margin-left: -5rem;
+}
+
+.-mt-64{
+  margin-top: -16rem;
 }
 
 .mb-0{
@@ -739,28 +751,12 @@ video {
   margin-right: 0.5rem;
 }
 
-.mt-0{
-  margin-top: 0px;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.mt-4{
-  margin-top: 1rem;
-}
-
-.-ml-20{
-  margin-left: -5rem;
-}
-
-.-mt-64{
-  margin-top: -16rem;
-}
-
 .mr-4{
   margin-right: 1rem;
+}
+
+.mt-0{
+  margin-top: 0px;
 }
 
 .mt-10{
@@ -771,16 +767,28 @@ video {
   margin-top: 3rem;
 }
 
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .mt-32{
   margin-top: 8rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .mt-8{
   margin-top: 2rem;
 }
 
-.-ml-16{
-  margin-left: -4rem;
+.mt-1{
+  margin-top: 0.25rem;
 }
 
 .block{
@@ -803,12 +811,20 @@ video {
   display: table;
 }
 
+.grid{
+  display: grid;
+}
+
 .contents{
   display: contents;
 }
 
 .hidden{
   display: none;
+}
+
+.h-10{
+  height: 2.5rem;
 }
 
 .h-12{
@@ -823,12 +839,28 @@ video {
   height: 1rem;
 }
 
+.h-40{
+  height: 10rem;
+}
+
 .h-5{
   height: 1.25rem;
 }
 
+.h-7{
+  height: 1.75rem;
+}
+
 .h-8{
   height: 2rem;
+}
+
+.h-80{
+  height: 20rem;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .h-full{
@@ -839,68 +871,16 @@ video {
   height: 100vh;
 }
 
-.h-auto{
-  height: auto;
-}
-
-.h-40{
-  height: 10rem;
-}
-
-.h-10{
-  height: 2.5rem;
-}
-
-.h-7{
-  height: 1.75rem;
-}
-
 .min-h-screen{
   min-height: 100vh;
 }
 
-.w-4{
-  width: 1rem;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-7{
-  width: 1.75rem;
-}
-
-.w-8{
-  width: 2rem;
-}
-
-.w-auto{
-  width: auto;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.w-3{
-  width: 0.75rem;
-}
-
-.w-6{
-  width: 1.5rem;
-}
-
-.w-9{
-  width: 2.25rem;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
 .w-1{
   width: 0.25rem;
+}
+
+.w-10{
+  width: 2.5rem;
 }
 
 .w-2{
@@ -911,8 +891,44 @@ video {
   width: 5rem;
 }
 
+.w-3{
+  width: 0.75rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
 .w-40{
   width: 10rem;
+}
+
+.w-5{
+  width: 1.25rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
+.w-8{
+  width: 2rem;
+}
+
+.w-80{
+  width: 20rem;
+}
+
+.w-9{
+  width: 2.25rem;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .w-fit{
@@ -920,8 +936,12 @@ video {
   width: fit-content;
 }
 
-.w-10{
-  width: 2.5rem;
+.w-full{
+  width: 100%;
+}
+
+.w-60{
+  width: 15rem;
 }
 
 .min-w-0{
@@ -972,6 +992,22 @@ video {
   resize: both;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-3{
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
 .flex-row{
   flex-direction: row;
 }
@@ -1004,8 +1040,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-12{
+  gap: 3rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
@@ -1058,18 +1102,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-lg{
-  border-radius: 0.5rem;
-}
-
-.rounded-md{
-  border-radius: 0.375rem;
-}
-
-.rounded-full{
-  border-radius: 9999px;
-}
-
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -1078,12 +1110,32 @@ video {
   border-radius: 1.5rem;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-md{
+  border-radius: 0.375rem;
+}
+
 .rounded-sm{
   border-radius: 0.125rem;
 }
 
 .border{
   border-width: 1px;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-b{
+  border-bottom-width: 1px;
 }
 
 .border-t{
@@ -1101,6 +1153,11 @@ video {
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .border-gray-600{
@@ -1128,6 +1185,11 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1153,35 +1215,6 @@ video {
   background-color: rgb(254 215 170 / var(--tw-bg-opacity));
 }
 
-.bg-slate-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.bg-slate-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
-}
-
-.bg-transparent{
-  background-color: transparent;
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-pink-500{
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
-}
-
 .bg-orange-500{
   --tw-bg-opacity: 1;
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
@@ -1195,6 +1228,11 @@ video {
 .bg-orange-900{
   --tw-bg-opacity: 1;
   background-color: rgb(124 45 18 / var(--tw-bg-opacity));
+}
+
+.bg-pink-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
 }
 
 .bg-slate-200{
@@ -1222,9 +1260,28 @@ video {
   background-color: rgb(71 85 105 / var(--tw-bg-opacity));
 }
 
+.bg-slate-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+
+.bg-slate-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 41 59 / var(--tw-bg-opacity));
+}
+
 .bg-slate-900{
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
+
+.bg-transparent{
+  background-color: transparent;
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-90{
@@ -1264,6 +1321,11 @@ video {
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill{
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-0{
@@ -1306,6 +1368,11 @@ video {
   padding: 2rem;
 }
 
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
+
 .px-10{
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1314,6 +1381,11 @@ video {
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-20{
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .px-24{
@@ -1381,29 +1453,9 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.py-\[0\.25rem\]{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 
 .py-5{
@@ -1411,9 +1463,14 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.px-20{
-  padding-left: 5rem;
-  padding-right: 5rem;
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .pb-0{
@@ -1424,20 +1481,20 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.pr-16{
-  padding-right: 4rem;
-}
-
 .pb-6{
   padding-bottom: 1.5rem;
 }
 
-.pt-8{
-  padding-top: 2rem;
+.pr-16{
+  padding-right: 4rem;
 }
 
 .pt-4{
   padding-top: 1rem;
+}
+
+.pt-8{
+  padding-top: 2rem;
 }
 
 .text-center{
@@ -1520,12 +1577,12 @@ video {
   font-weight: 500;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .font-normal{
   font-weight: 400;
+}
+
+.font-semibold{
+  font-weight: 600;
 }
 
 .uppercase{
@@ -1536,16 +1593,8 @@ video {
   text-transform: lowercase;
 }
 
-.leading-\[1\.6\]{
-  line-height: 1.6;
-}
-
 .leading-none{
   line-height: 1;
-}
-
-.leading-tight{
-  line-height: 1.25;
 }
 
 .leading-normal{
@@ -1554,6 +1603,10 @@ video {
 
 .leading-relaxed{
   line-height: 1.625;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .tracking-tight{
@@ -1599,19 +1652,14 @@ video {
   color: rgb(254 215 170 / var(--tw-text-opacity));
 }
 
-.text-red-500{
-  --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-pink-500{
   --tw-text-opacity: 1;
   color: rgb(236 72 153 / var(--tw-text-opacity));
+}
+
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
 .text-slate-200{
@@ -1627,6 +1675,11 @@ video {
 .text-slate-900{
   --tw-text-opacity: 1;
   color: rgb(15 23 42 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .underline{
@@ -1696,22 +1749,22 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-none{
-  transition-property: none;
-}
-
 .transition-all{
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-.duration-200{
-  transition-duration: 200ms;
+.transition-none{
+  transition-property: none;
 }
 
 .duration-150{
   transition-duration: 150ms;
+}
+
+.duration-200{
+  transition-duration: 200ms;
 }
 
 .ease-in-out{
@@ -1720,16 +1773,6 @@ video {
 
 .ease-linear{
   transition-timing-function: linear;
-}
-
-.placeholder\:text-neutral-500::-moz-placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(115 115 115 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-neutral-500::placeholder{
-  --tw-text-opacity: 1;
-  color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
 .hover\:bg-slate-500:hover{
@@ -1747,38 +1790,18 @@ video {
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-lime-800:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 98 18 / var(--tw-bg-opacity));
+}
+
 .hover\:text-gray-400:hover{
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
-.hover\:text-gray-800:hover{
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
 .hover\:underline:hover{
   text-decoration-line: underline;
-}
-
-.hover\:shadow-md:hover{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.focus\:z-\[3\]:focus{
-  z-index: 3;
-}
-
-.focus\:outline-none:focus{
-  outline: 2px solid transparent;
-  outline-offset: 2px;
-}
-
-.active\:bg-pink-600:active{
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 39 119 / var(--tw-bg-opacity));
 }
 
 .group:invalid .group-invalid\:pointer-events-none{
@@ -1797,12 +1820,6 @@ video {
   display: block;
 }
 
-@media (prefers-reduced-motion: reduce){
-  .motion-reduce\:transition-none{
-    transition-property: none;
-  }
-}
-
 @media (min-width: 640px){
   .sm\:mb-2{
     margin-bottom: 0.5rem;
@@ -1814,14 +1831,6 @@ video {
 
   .sm\:mb-6{
     margin-bottom: 1.5rem;
-  }
-
-  .sm\:mr-2{
-    margin-right: 0.5rem;
-  }
-
-  .sm\:mt-0{
-    margin-top: 0px;
   }
 
   .sm\:max-w-md{
@@ -1865,10 +1874,6 @@ video {
 }
 
 @media (min-width: 768px){
-  .md\:ml-4{
-    margin-left: 1rem;
-  }
-
   .md\:block{
     display: block;
   }
@@ -1881,16 +1886,16 @@ video {
     display: none;
   }
 
-  .md\:w-6\/12{
-    width: 50%;
-  }
-
-  .md\:w-1\/2{
-    width: 50%;
+  .md\:w-3\/4{
+    width: 75%;
   }
 
   .md\:max-w-full{
     max-width: 100%;
+  }
+
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:flex-row{
@@ -1911,11 +1916,6 @@ video {
     --tw-space-y-reverse: 0;
     margin-top: calc(1.5rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(1.5rem * var(--tw-space-y-reverse));
-  }
-
-  .md\:px-10{
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
   }
 
   .md\:px-24{
@@ -1939,44 +1939,16 @@ video {
 }
 
 @media (min-width: 1024px){
-  .lg\:order-1{
-    order: 1;
-  }
-
-  .lg\:order-2{
-    order: 2;
-  }
-
-  .lg\:order-3{
-    order: 3;
-  }
-
-  .lg\:-ml-16{
-    margin-left: -4rem;
-  }
-
-  .lg\:mr-4{
-    margin-right: 1rem;
-  }
-
-  .lg\:w-3\/12{
-    width: 25%;
-  }
-
-  .lg\:w-4\/12{
-    width: 33.333333%;
-  }
-
-  .lg\:w-9\/12{
-    width: 75%;
+  .lg\:w-1\/2{
+    width: 50%;
   }
 
   .lg\:max-w-screen-xl{
     max-width: 1280px;
   }
 
-  .lg\:self-center{
-    align-self: center;
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:px-8{
@@ -1987,14 +1959,6 @@ video {
   .lg\:py-20{
     padding-top: 5rem;
     padding-bottom: 5rem;
-  }
-
-  .lg\:pt-4{
-    padding-top: 1rem;
-  }
-
-  .lg\:text-right{
-    text-align: right;
   }
 }
 
@@ -2009,6 +1973,10 @@ video {
 
   .xl\:w-7\/12{
     width: 58.333333%;
+  }
+
+  .xl\:w-1\/3{
+    width: 33.333333%;
   }
 
   .xl\:flex-row{
@@ -2030,20 +1998,6 @@ video {
 }
 
 @media (prefers-color-scheme: dark){
-  .dark\:border-neutral-400{
-    --tw-border-opacity: 1;
-    border-color: rgb(163 163 163 / var(--tw-border-opacity));
-  }
-
-  .dark\:border-white\/10{
-    border-color: rgb(255 255 255 / 0.1);
-  }
-
-  .dark\:bg-orange-200{
-    --tw-bg-opacity: 1;
-    background-color: rgb(254 215 170 / var(--tw-bg-opacity));
-  }
-
   .dark\:text-gray-400{
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2052,16 +2006,6 @@ video {
   .dark\:text-white{
     --tw-text-opacity: 1;
     color: rgb(255 255 255 / var(--tw-text-opacity));
-  }
-
-  .dark\:placeholder\:text-neutral-200::-moz-placeholder{
-    --tw-text-opacity: 1;
-    color: rgb(229 229 229 / var(--tw-text-opacity));
-  }
-
-  .dark\:placeholder\:text-neutral-200::placeholder{
-    --tw-text-opacity: 1;
-    color: rgb(229 229 229 / var(--tw-text-opacity));
   }
 }
 
@@ -2073,12 +2017,4 @@ video {
 .invalid\:\[\&\:not\(\:placeholder-shown\)\:not\(\:focus\)\]\:border-red-500:not(:placeholder-shown):not(:focus):invalid{
   --tw-border-opacity: 1;
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
-}
-
-.\[\&\>svg\]\:h-5>svg{
-  height: 1.25rem;
-}
-
-.\[\&\>svg\]\:w-5>svg{
-  width: 1.25rem;
 }
